[package]
name = "reductionml-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reductionml = { path = "../reductionml" }
clap = { version = "4.3.0", features = ["derive"] }
crossterm = "0.26.1"
anyhow = "1.0.71"
colored = "2.0.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
clap_complete = "4.3.1"
indicatif = "0.17.5"
