[package]
name = "reductionml-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reductionml-core = { path = "../reductionml-core", version = "0.1.0" }
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.71"
colored = "2.0.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
clap_complete = "4.3.1"
rayon = "1.7.0"
flume = "0.10.14"
prettytable-rs = "^0.10"
crossterm = "0.26.1"

[dev-dependencies]
valico = "4"
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
