[package]
name = "reductionml-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reductionml_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
reductionml-core = { path = "../reductionml-core", version = "0.0.1" }
