[package]
name = "reductionml-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reductionml"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
reductionml-core = { path = "../reductionml-core" }
pythonize = "0.19.0"
once_cell = "1.17.2"
