[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"


[project]
name = "reductionml"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'typing-extensions >= 4.0, < 5.0',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "reductionml.__version__"}

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "reductionml._reductionml"
