[package]
name = "reductionml-docs-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reductionml_docs_extension"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
reductionml-core = { path = "../../reductionml-core" }
pythonize = "0.19.0"
once_cell = "1.17.2"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
